# lexikal

./: .cursorrc  .gitignore  .zshrc  README.md  start.sh
client/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
client/api/: notebook.ts
client/app/: globals.css  layout.tsx  page.tsx
client/constants/: app.ts
client/hooks/: use-media-query.ts
client/lib/: menu-list.ts
client/types/: notebook.ts  source.ts
server/: README.md  pyproject.toml
server/app/: main.py
server/app/api/: __init__.py  auth.py  healthz.py  notebooks.py  users.py
server/app/api/notebooks/: __init__.py  notebooks.py
server/app/api/notebooks/chat/: __init__.py  chat.py
server/app/api/notebooks/contexts/: __init__.py  contexts.py
server/app/crud/: __init__.py  chunks.py  contexts.py  notebook.py  notebooks.py  user.py  users.py
server/app/db/: __init__.py  supabase.py
server/app/db/sql/functions/: README.md  match_chunks.sql
server/app/middleware/: __init__.py  auth.py
server/app/models/: __init__.py  chunks.py  contexts.py  file_markdown.py  notebook.py  notebooks.py  user.py  users.py
server/app/schemas/: __init__.py  base.py  chat.py  contexts.py  notebook.py  notebooks.py  user.py  users.py
server/app/utils/: __init__.py  chat.py  chunking.py  contexts.py  embeddings.py  storage.py  supabase.py
www/: .npmrc  README.md  next.config.js  openapi-ts.config.js  openapi.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
www/api/: auth.ts  chat.ts  contexts.ts  fetch.ts  keys.ts  notebook.ts  notebooks.ts  storage.ts  types.ts  users.ts
www/app/: layout.tsx  page.tsx
www/assets/: icons.tsx
www/constants/: app.ts
www/hooks/: use-breadcrumbs.ts  use-cache-query.ts  use-key-press.ts
www/utils/: auth.ts  (+1 more)
(+202 files in other folders)
